--- a/ember-quickstart/package.json
+++ b/ember-quickstart/package.json
@@ -31,6 +31,9 @@
     "@ember/optional-features": "^2.0.0",
     "@ember/string": "^3.1.1",
     "@ember/test-helpers": "^3.2.1",
+    "@embroider/compat": "^3.4.4",
+    "@embroider/core": "^3.4.4",
+    "@embroider/webpack": "^3.2.2",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "broccoli-asset-rev": "^3.0.0",
@@ -69,7 +72,7 @@
     "stylelint-config-standard": "^34.0.0",
     "stylelint-prettier": "^4.1.0",
     "tracked-built-ins": "^3.3.0",
-    "webpack": "^5.89.0"
+    "webpack": "^5.90.1"
   },
   "engines": {
     "node": ">= 18"
